# TrelloReminder

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.dev.yaml  docker-compose.yaml  docker-run.sh  logger.py  main.py  pyproject.toml  requirements.txt
envs/: .env.prod-example
services/: discord_bot.py  discord_notifier.py  reminder_coordinator.py  reminder_service.py  trello_client.py  trello_reminder.py
src/: config.py  logger.py  main.py
src/discord_notifier/: __init__.py  notifier.py
src/reminder_service/: __init__.py  service.py
src/trello_client/: __init__.py  client.py
