[tool.poetry]
name = "trelloreminder"
version = "0.1.0"
description = "A Trello reminder bot"
authors = ["mavvvii <hubert.kwiatekx2003@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
discord = ">=2.3.2,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
pre-commit = "^4.2.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
